--- a/index.html
+++ b/index.html
@@ -4,35 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Form</title>
 </head>
 <body>
-    <main class="container">
+    <div class="form-container">
         <h2>A simple Log in form</h2>
-        <form class="form-container">
-           <div class="input-field-container">
-                <label for="user_name">Name</label>
-                <input type="text" id="user_name" name="user_name" required placeholder="Your Name">
-           </div>
-           <div class="input-field-container">
-                <label for="user_email">Email</label>
-                <input type="email" id="user_email" name="user_email" required placeholder="Email">
-           </div >
-           <div class="input-field-container">
-                <label for="user_phonenumber">Phone Number</label>
-                <input type="number" id="user_phonenumber" name="user_phonenumber" required>
-           </div>
-            <div class="gender-field-container"> 
-                <input type="radio" id="male" name="gender" checked> Male
-                <input type="radio" id="female" name="gender" > Female
-            </div>
-           <div class="input-field-container">
-                <label for="user_password">Password</label>
-                <input type="password" id="user_password" name="password" required >
-           </div>
-           <button type="submit">Submit</button>
+        <form>
+            <div class="form-floating mb-4">
+                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" required>
+                <label for="floatingInput">Email address</label>
+              </div>
+              <div class="form-floating mb-4">
+                <input type="password" class="form-control" id="floatingPassword" placeholder="Password" required>
+                <label for="floatingPassword">Password</label>
+              </div>
+              <div class="form-floating mb-4">
+                <input type="number" class="form-control" id="floatingNumber" placeholder="phone-number"required>
+                <label for="floatingNumber">Phone Number</label>
+              </div>
+              <div class="gender mb-4" >
+                <span>Gender</span>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1" checked>
+                    <label class="form-check-label" for="inlineRadio1">Male</label>
+                  </div>
+                  <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+                    <label class="form-check-label" for="inlineRadio2">Female</label>
+                  </div>
+              </div>
+              <div class="form-floating mb-4">
+                <input type="password" class="form-control" id="floatingPassword" placeholder="Password"required>
+                <label for="floatingPassword">Password</label>
+              </div>
+              <div class="button-container">
+                <button type="submit" class="button" disabled>Submit</button>
+              </div>
         </form>
-    </main>
+    </div>
     
 </body>
 </html>
