--- a/index.html
+++ b/index.html
@@ -5,32 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Form</title>
 </head>
 <body>
-    <div class="form-container" id="form">
+    <div class="form-container" id="form-container">
         <h2>A simple Log in form</h2>
-        <form>
+        <form id="form">
             <div class="form-floating mb-4">
-                <input type="text" class="form-control" id="floatingInputName" placeholder="John Doe" required>
+                <input type="text" class="form-control" id="floatingInputName" placeholder="John Doe" required name="full-name">
                 <label for="floatingInput">Full Name</label>
               </div>
             <div class="form-floating mb-4">
-                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" required>
+                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" required name="email">
                 <label for="floatingInput">Email address</label>
               </div>
               <div class="form-floating mb-4">
-                <input type="number" class="form-control" id="floatingNumber" placeholder="phone-number"required>
+                <input type="number" class="form-control" id="floatingNumber" placeholder="phone-number"required name="phone-number">
                 <label for="floatingNumber">Phone Number</label>
               </div>
               <div class="gender mb-4" >
                 <span>Gender</span>
                 <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="male" checked>
+                    <input class="form-check-input" type="radio" name="Male" id="inlineRadio1" checked>
                     <label class="form-check-label" for="inlineRadio1">Male</label>
                   </div>
                   <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="female">
+                    <input class="form-check-input" type="radio" name="Female" id="inlineRadio2">
                     <label class="form-check-label" for="inlineRadio2">Female</label>
                   </div>
               </div>
@@ -39,12 +40,13 @@
                 <label for="floatingPassword">Password</label>
               </div>
               <div class="button-container">
-                <button type="submit" class="button" id="submit-btn">Submit</button>
+                <input type="submit" class="button" id="submit-btn"> 
               </div>
         </form>
     </div>
-    <div class="success" id="success">
-        <h2>sucess</h2>
+    <div class="success" id="success" hidden>
+      <img src="success-icon.svg" alt="Success-icon">
+      <h2>Your form has been submiited</h2>
     </div>
     <script src="script.js"></script>
 </body>
